BUG#21474 (There is a rotation before the last table map): Removing code to step the group log position and just stepping the event log position.  If the group log position were stepped one time too many, it might be that the group starts at a position that is not possible, e.g., at a Rows_log_event, or between an Intvar_log_event and the following associated Query_log_event.